--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- script de A-Frame version1 1.0.0 -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- script de AR.JS con soporte de marker + location -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-     </head>
-     <body style="margin : 0px; overflow: hidden;">
-      <a-scene embedded arjs>
+  </head>
+<body style="margin : 0px; overflow: hidden;"> <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-entity geometry="primitive: triangle" material="color: #0000FF; shader: flat"> </a-entity> </a-marker>
-        <a-entity camera></a-entity>
+            <!-- Cilindro azul -->
+            <a-cylinder position="0 0.5 0"  radius="0.3"  height="1" color="#0000FF" segments-radial="3"> </a-cylinder>
+          </a-marker>
+        <a-entity camera> </a-entity>
     </a-scene>
 </body>
 </html>
